# termux-am-socket

./: .gitignore  CMakeLists.txt  README.md  termux-am.c  termux-am.cpp  termux-am.h.in  termux-am.sh.in
